[package]
name = "rocketed"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.0.1"
tokio = { version = "1.13.0", features = ["full"] }
rocket = { version = "0.5.0-rc.1", features = ["json"]}
serde = "1.0.130"
serde_json = "1.0.69"
futures = "0.3.17"

[dev-dependencies]
tokio-test = "*"
reqwest = { version = "0.11.6", features = ["json"] }